<?xml version="1.0"?>
<package format="2">
  <name>timmo</name>
  <version>1.5.2</version>
  <description>
    Basic ROS support for the timmo 3D LIDARs.
  </description>
  <maintainer email="josh.whitley@autoware.org">Josh Whitley</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/timmo</url>
  <url type="repository">https://github.com/ros-drivers/timmo</url>
  <url type="bugtracker">https://github.com/ros-drivers/timmo/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>timmo_driver</exec_depend>
  <exec_depend>timmo_laserscan</exec_depend>
  <exec_depend>timmo_msgs</exec_depend>
  <exec_depend>timmo_pointcloud</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
